Update - Added PageRequest for pagination